src/comps/styles/styles.css
body {
  margin: 0;
  padding: 0;
}

@font-face {
  font-family: Satoshi-Bold;
  src: url(./Satoshi-Bold.ttf);
}

@font-face {
  font-family: Satoshi-Regular;
  src: url(./Satoshi-Regular.ttf);
}

@font-face {
  font-family: Satoshi-Medium;
  src: url(./Satoshi-Medium.ttf);
}

@font-face {
  font-family: Satoshi-Regular;
  src: url(./Satoshi-Regular.ttf);
}

.navbar {


background-color: white;
  display: grid;
  grid-template-columns: 3fr 1fr 1fr 1fr;
  justify-content: center;
  align-items: center;

}

p,
h3 {
  font-family: Satoshi-Bold;
}

a {
  text-decoration: none;
  color: inherit;
  font-family: Satoshi-Bold;
}

.navbar h1 {
  margin: 10px;
  font-family: Satoshi-Bold;
  padding-left: 1rem;
}

.card {
  display: flex;
  margin: 10px;
  background-color: #fff;
  justify-content: center;
  min-width: 0;
  flex-direction: column;
  background-clip: border-box;
  /* border-radius: 0.25rem; */
}

.shoping-grid {
    /* --sides: 5rem; */

       
        height: 100%;
        width: 100%;
    
    padding-top: 1rem;

  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.btn {
    font-family: Satoshi-Bold;
  display: block;
  font-weight: 400;
  text-align: center;
  /* white-space: nowrap; */
  /* vertical-align: middle; */
  background-color: #007bff;
  color: #fff;
  border-color: #007bff;
  user-select: none;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  
  transition: 0.2s ease-in-out;;
}

.btn-home {
    padding: 100px;
    background-color: black;
}



#homepage-img {
    width: 30%;
}

.title-background {
    z-index: -3;
    bottom:  0.0001rem;
    position:absolute;
}

.homepage-body {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-family: Satoshi-Bold;
}

.btn:hover {
    background-color: rgb(125, 17, 146);
    color: rgb(0, 0, 0);
    box-shadow: 0 5px 10px rgba(205, 195, 212, 0.4);
}

.btn-home:hover {
    box-shadow: 0 5px 10px rgba(205, 195, 212, 0.4);
    background-color: white;
    color: rgb(0, 0, 0);
}



.card-img {

  width: 100%;
  height:100%;
  object-fit: cover;
  object-position: bottom;
}

.card-body {
    display: flex;
    flex-grow:1;
    gap: 120px;
    align-items: center;
    justify-content: space-between
}

.card-title {

    font-size: 1.1rem;
}

.product-page-container {
    font-family:  Satoshi-Bold;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.product-img {
    width: 50%;
}

.product-desc {
    display: flex;
    justify-content: center;
    align-items: center;
    /* align-self: flex-start */
}


.card-pricebox {
border-bottom: 1px solid black;
border-right: 1px solid black;
font-size: 1rem;

padding: 1%;
/* border: 1px black solid; */
display: flex;
align-items: center;
gap: 10px;

}

